# gblog

./: .gitignore  README.md  docker-compose.yml
backend/: BlogServer.cc  CMakeLists.txt  Dockerfile  README.md  main.cc
backend/docs/: 1-博客服务器功能说明.md
backend/k8s/: deployment.yaml
backend/scripts/: S1-RunServer.sh  S2-RunTests.sh
docs/plans/: 2026-02-28-business-auth-db-gateway-design.md  2026-02-28-business-auth-db-gateway-implementation.md
frontend/: admin.html  article.html  blog.html  chat-local.html  chat.html  docs.html  index.html  login.html  profile.html  projects.html  register.html  search.html
frontend/css/: admin.css  article.css  auth.css  base.css  blog.css  chat-local.css  chat.css  components.css  docs.css  home.css  profile.css  projects.css  search.css
frontend/docs/: galay-etcd.html  galay-http.html  galay-kernel.html  galay-mcp.html  galay-mongo.html  galay-mysql.html  galay-redis.html  galay-rpc.html  galay-ssl.html  galay-utils.html  index.html
frontend/js/: admin.js  article.js  auth.js  blog.js  chat-local-mock.js  chat-local-regression.test.cjs  chat.js  docs-quickstart.js  docs.js  home.js  main.js  profile.js  projects.js  search.js
repos/galay-ecosystem/: README.md
repos/galay-etcd/: README.md
repos/galay-etcd/docs/: 01-快速开始.md  02-API参考.md  03-测试与压测.md  04-架构设计.md  05-示例代码.md  06-高级主题.md  07-常见问题.md
repos/galay-http/: README.md
repos/galay-http/docs/: 01-快速开始.md  02-架构设计.md  03-API文档.md  04-示例代码.md  04性能测试.md  05-高级主题.md  06-常见问题.md  07-性能测试.md  1-架构设计.md  2-API参考.md  3-使用指南.md  README.md
repos/galay-kernel/: README.md
repos/galay-kernel/docs/: 00-快速开始.md  01-API文档.md  02-性能测试.md  03-计算调度器.md  04-UDP性能测试.md  05-调度器.md  06-协程.md  07-网络IO.md  08-文件IO.md  09-并发.md  10-定时器调度器.md  11-环形缓冲区.md  12-零拷贝发送文件.md  13-运行时Runtime.md  14-文件监控.md  15-异步同步原语.md  16-架构设计.md  17-示例代码.md  18-常见问题.md  19-高级主题.md
repos/galay-mcp/: README.md
repos/galay-mcp/docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  02-标准输入输出MCP测试.md  03-Stdio服务器测试.md  03-使用指南.md  04-性能测试.md  04-示例代码.md  05-HTTP客户端测试.md  05-常见问题.md  06-HTTP服务器测试.md  06-标准输入输出MCP测试.md  07-Stdio服务器测试.md  08-性能测试.md  09-HTTP客户端测试.md  10-HTTP服务器测试.md
repos/galay-mcp/test/: T1-StdioClient.cc  T2-StdioServer.cc  T3-HttpClient.cc  T4-HttpServer.cc
repos/galay-mongo/: README.md
repos/galay-mongo/docs/: 01-架构设计.md  02-API参考.md  03-使用指南.md  04-性能测试.md  05-快速开始.md  06-示例代码.md  07-高级主题.md  08-常见问题.md
repos/galay-mysql/: README.md
repos/galay-mysql/docs/: 01-快速开始.md  02-架构设计.md  03-API文档.md  04-示例代码.md  05-高级主题.md  06-常见问题.md
repos/galay-redis/: README.md
repos/galay-redis/docs/: 01-快速开始.md  02-使用示例.md  03-模块介绍.md  04-运行原理.md  05-性能分析.md  06-API文档.md  07-架构设计.md  08-高级主题.md  09-常见问题.md
repos/galay-rpc/: README.md
repos/galay-rpc/docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-性能测试.md  05-示例代码.md  06-高级主题.md  07-常见问题.md
repos/galay-ssl/: README.md
repos/galay-ssl/docs/: 01-快速开始.md  02-使用示例.md  03-模块介绍.md  04-运行原理.md  05-性能分析.md  06-API文档.md  07-架构设计.md  08-常见问题.md  09-高级主题.md
repos/galay-utils/: README.md
repos/galay-utils/docs/: 00-快速开始.md  01-架构设计.md  02-API索引.md  03-示例代码.md  04-高级主题.md  05-常见问题.md  app.md  backtrace.md  balancer.md  circuitbreaker.md  consistent_hash.md  huffman.md  mvcc.md  parser.md  pool.md  process.md  random.md  ratelimiter.md  signal.md  string.md  system.md  thread.md  trie.md  typename.md
scripts/: compose-stack.sh
service/admin/: .env.example  README.md  requirements.txt
service/admin/docker/: Dockerfile
service/admin/docs/: api.md
service/admin/scripts/: run_server.py
service/admin/src/: app.py  config.py
service/ai/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docs_paths.example.txt  requirements.txt
service/ai/docker/: Dockerfile  docker-compose.yml
service/ai/docs/: doc_style_prompt.md  接口参考.md  架构设计.md
service/ai/eval/: benchmark_cases.json  last_eval_report.json
service/ai/scripts/: apply_doc_style_prompt.py  build_index.py  builder.sh  evaluate_kb.py  generate_galay_docs.py  install_linux.sh  rebuild_kb.py  run_daily_eval.py  run_server.py  test_api.py  verify_docs_prompt_style.py  verify_example_consistency.py  verify_markdown_format.py
service/ai/src/: app.py  config.py
service/auth/: AuthServer.cc  CMakeLists.txt  README.md
service/auth/docker/: Dockerfile
service/auth/scripts/: S1-RunServer.sh  S3-Build.sh
service/auth/src/: DbHttpClient.cc  DbHttpClient.h  PasswordCodec.cc  PasswordCodec.h  TokenStore.cc  TokenStore.h
service/auth/test/: T1-AuthApi.sh
service/backend/: BlogServer.cc  CMakeLists.txt  Dockerfile  README.md  main.cc
service/backend/docker/: Dockerfile
service/backend/k8s/: deployment.yaml
service/backend/scripts/: S1-RunServer.sh  S2-RunTests.sh
service/blog/: CMakeLists.txt  Dockerfile  README.md
service/blog/docs/: 1-博客服务器功能说明.md
service/blog/scripts/: S1-RunServer.sh  S2-RunTests.sh  S3-Build.sh
service/business/: AuthService.cc  AuthService.h  BlogServer.cc  CMakeLists.txt  DbService.cc  DbService.h  README.md  main.cc
service/business/docker/: Dockerfile
service/business/docs/: 1-博客服务器功能说明.md
service/business/k8s/: deployment.yaml
service/db/: CMakeLists.txt  DbServer.cc  README.md
service/db/docker/: Dockerfile
service/db/docs/: api.md  schema.sql
service/db/scripts/: S1-RunServer.sh  S2-InitSchema.sh  S3-Build.sh  S4-RunCrudTest.sh  S5-RunDocumentIndexTest.sh
service/db/src/: DbProvider.h  MySqlDbProvider.cc  MySqlDbProvider.h
service/db/test/: T1-UserCrudApi.sh  T2-DocumentIndexApi.sh  T3-UpdatePasswordCrashRegression.sh
service/gateway/: .env.example  CMakeLists.txt  README.md
service/gateway/config/: static-server.conf
service/gateway/docker/: Dockerfile
service/gateway/scripts/: demo-stream-proxy.sh  mock_sse_upstream.py  stream_probe.py
service/gateway/src/: StaticServerConfig.cc  StaticServerConfig.h  main.cc
service/indexer/: .env.example  README.md  requirements.txt
service/static/: .env.example  Dockerfile  README.md  compiler.sh  docker-compose.yml  main.cc
(+52 files in other folders)
